--- a/styles.css
+++ b/styles.css
@@ -2,43 +2,50 @@ main {
     margin-top: 60px
 }
 
+/* The flip card container - set the width and height to whatever you want. 
+We have added the border property to demonstrate that the flip itself goes out of the box on hover
+(remove perspective if you don't want the 3D effect */
 .flip-card {
-    perspective: 1000px;
-}
-
-.flip-card-inner {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.8s;
     transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-card-inner {
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
-}
-
-.flip-card-front {
-    background-color: #f8f9fa;
-    color: #000;
-}
-
-.flip-card-back {
-    background-color: #343a40;
-    color: #000;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: dodgerblue;
+    color: white;
     transform: rotateY(180deg);
-}
-
-.card-img-top {
-    max-height: 200px;
-    object-fit: cover;
-}
+  }
