--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 main {
-    margin-top: 60px
+    margin-top: 65px
+}
+
+body{
+  background-color: #282A3A;
 }
 
 /* The flip card container - set the width and height to whatever you want. 
@@ -8,7 +12,7 @@ We have added the border property to demonstrate that the flip itself goes out o
 .flip-card {
     background-color: transparent;
     width: 300px;
-    height: 200px;
+    height: 300px;
     border: 1px solid #f1f1f1;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
@@ -45,7 +49,8 @@ We have added the border property to demonstrate that the flip itself goes out o
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
+    background-color: #454F59;
     color: white;
     transform: rotateY(180deg);
   }
+  
