--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,50 @@ We have added the border property to demonstrate that the flip itself goes out o
     color: white;
     transform: rotateY(180deg);
   }
+
+  .card-title{
+    margin-top: 50px;
+  }
+
+  .More_Details{
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  /* 5 */
+  .More_Details {
+    background: rgb(255,151,0);
+    border: none;
+    z-index: 1;
+  }
+  .More_Details:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 5px;
+    background-color: #eaf818;
+    background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    transition: all 0.3s ease;
+  }
+  .More_Details:hover {
+    color: #000;
+  }
+  .More_Details:hover:after {
+    top: auto;
+    bottom: 0;
+    height: 100%;
+    /* background-color: #eaf818; */
+  }
+  .More_Details:active {
+    top: 2px;
+  }
   
   /* Navbar */
 .navbar {
